# SimpleRT

./: Dockerfile  README.md  docker-compose.yml
simple-rt-android/: .gitignore  build.gradle  gradle.properties
simple-rt-android/app/: build.gradle
simple-rt-android/app/src/main/: AndroidManifest.xml
simple-rt-android/app/src/main/java/com/viper/simplert/: InfoActivity.java  Native.java  StartAccessoryActivity.java  TetherService.java
simple-rt-android/app/src/main/rust/: Cargo.toml
simple-rt-android/app/src/main/rust/src/: lib.rs  tunnel.rs
simple-rt-android/app/src/main/rust/src/tunnel/: binary.rs  mod.rs  tunnel.rs
simple-rt-android/gradle/wrapper/: gradle-wrapper.properties
simple-rt-cli/: .gitignore  compile_commands.json  iface_up.sh
simple-rt-cli/include/: accessory.h  adk.h  network.h  resolv_compat.h  tun.h  utils.h
simple-rt-cli/src/: accessory.c  adk.c  main.c  network.c
simple-rt-cli/src/linux/: tun.c  utils.c
simple-rt-cli/src/osx/: tun.c  utils.c
simple-rt-cli/src/unix_common/: resolver.c
